--- a/build.gradle
+++ b/build.gradle
@@ -41,11 +41,11 @@ jacoco {
 }
 
 jacocoTestReport {
-//    reports {
-//        xml.enabled false
-//        csv.enabled false
-//        html.destination "${buildDir}/jacocoHtml"
-//    }
+    dependsOn test
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
         group = "Reporting"
         description = "Generate Jacoco coverage reports after running tests."
         additionalSourceDirs = files(sourceSets.main.allJava.srcDirs)
